Fixed bug on smaller screens where scroller and image sizes weren't the same - Also changed project.tsx, so that .project-child could be centered if desired

--- a/src/page/section/components/project-image-scroller.module.css
+++ b/src/page/section/components/project-image-scroller.module.css
@@ -13,7 +13,7 @@
 
 	transform: scale(1);
 
-	max-width: 100%;
+	max-width: min(70vw, 500px);
 	margin: -1em;
 	padding: 1em;
 	/* padding: 1em 2em 1em 0; */
